# codeql-mcp

./: .gitignore  CONTEXT7.md  IMPROVEMENT_PLAN.md  QUICK_START_IMPROVEMENTS.md  README.md  TECHNICAL_GUIDELINES.md  codeqlclient.py  package-lock.json  pyproject.toml  server.py  validation.py
tests/: conftest.py  test_codeql_client.py  test_integration.py  test_server_tools.py  test_validation.py
tests/fixtures/: mock_responses.py
tests/fixtures/sample_queries/: sql_injection.ql
tests/query_tests/: .gitignore  qlpack.yml  results.bqrs  simple_test.ql  simple_test.qlx  test_simple.qlref
tests/query_tests/query_tests.testproj/: codeql-database.yml
tests/query_tests/query_tests.testproj/diagnostic/: cli-diagnostics-add-20251012T122930.767Z.json
tests/query_tests/test_db/: baseline-info.json  codeql-database.yml
tests/query_tests/test_db/db-python/default/: containerparent.rel  ext_argreturn.rel  ext_argtype.rel  ext_proptype.rel  ext_rettype.rel  files.rel  folders.rel  locations_ast.rel  locations_default.rel  numlines.rel  py_Functions.rel  py_Modules.rel  py_alllines.rel  py_arguments.rel  py_citems.rel  py_cmembers_versioned.rel  py_cobject_sources.rel  py_cobjectnames.rel  py_cobjects.rel  py_cobjecttypes.rel  py_codelines.rel  py_docstringlines.rel  py_exports.rel  py_expr_contexts.rel  py_expr_lists.rel  py_exprs.rel  py_extracted_version.rel  py_flags_versioned.rel  py_flow_bb_node.rel  py_idoms.rel  py_locations.rel  py_module_path.rel  py_scope_flow.rel  py_scope_location.rel  py_scopes.rel  py_special_objects.rel  py_ssa_defn.rel  py_ssa_use.rel  py_ssa_var.rel  py_stmt_lists.rel  (+8 more)
tests/query_tests/test_db/db-python/default/cache/pages/: 12.pack  16.pack  17.pack  26.pack  30.pack  (+21 more)
tests/query_tests/test_db/db-python/default/pools/: max-id#Dynamic-New-Entities
tests/query_tests/test_db/diagnostic/: cli-diagnostics-add-20251012T123236.687Z.json
tools/: __init__.py  analysis.py  database.py  discovery.py  query.py  results.py
(+95 files in other folders)
